--- a/package.json
+++ b/package.json
@@ -38,6 +38,15 @@
     ]
   },
   "devDependencies": {
-    "husky": "^7.0.4"
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.4",
+    "prettier": "^2.5.1"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix"
+    ]
   }
 }
