--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-codemirror": "^4.5.1",
+    "htmlparser2": "^7.2.0",
     "lodash": "^4.17.21",
     "nanoid": "^3.3.1",
     "prop-types": "^15.8.1",
